--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
   "bin": {
     "mendable-private-web-scraper": "./index.js"
   },
-  "keywords": ["mendable", "private", "web-scraper"],
+  "keywords": [
+    "mendable",
+    "private",
+    "web-scraper"
+  ],
   "author": "Anthony Whitford <anthony@whitford.com> (https://anthonywhitford.com)",
   "license": "ISC",
   "packageManager": "pnpm@8.15.5+sha256.4b4efa12490e5055d59b9b9fc9438b7d581a6b7af3b5675eb5c5f447cee1a589",
   "devDependencies": {
     "@tsconfig/node-lts": "^20.1.3",
     "@types/node": "^20.12.2",
+    "prettier": "^3.2.5",
     "typescript": "^5.4.3"
   },
   "dependencies": {
     "@mendable/data-connectors": "^0.0.47",
     "commander": "^12.0.0",
     "dotenv": "^16.4.5"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "semi": false
   }
 }
