Updated the bin configuration. See https://github.com/Haimantika/introduction-npm-package

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "scrape": "node dist/index.js"
   },
   "bin": {
-    "mendable-private-web-scraper": "./index.js"
+    "mendable-private-web-scraper": "./dist/index.js"
   },
   "keywords": [
     "mendable",
